--- a/catalog.html
+++ b/catalog.html
@@ -311,7 +311,35 @@
                           </script>
                           <script type="text/javascript" src="js/jquery.ui.touch-punch.min.js"></script>
                           <div id="ExtendedFilterContainer117" class="ExtendedFilterContainer">
-                            <form name="ExtendedFilter117" action="/zhenshchiny/zhilety/search/result" method="get">
+                            <div class="catalog-mobile">
+                              <div class="catalog-mobile__filters-wrapper">
+                                <div class="catalog-mobile__filters">
+                                  <svg width="25" height="19" viewBox="0 0 25 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <mask id="path-1-outside-1" maskUnits="userSpaceOnUse" x="2.72974" y="-0.253906" width="18" height="19" fill="black">
+                                      <rect fill="white" x="2.72974" y="-0.253906" width="18" height="19"/>
+                                      <path fill-rule="evenodd" clip-rule="evenodd" d="M7.21724 3.44497V1.39193C7.21724 1.03524 6.92809 0.746094 6.5714 0.746094C6.21472 0.746094 5.92557 1.03524 5.92557 1.39193V3.50325L7.21724 3.44497ZM5.92557 7.89239V17.4086C5.92557 17.7653 6.21472 18.0544 6.5714 18.0544C6.92809 18.0544 7.21724 17.7653 7.21724 17.4086V7.87473"/>
+                                      <path fill-rule="evenodd" clip-rule="evenodd" d="M9.53049 5.64635C9.53049 4.04559 8.23181 2.74818 6.63012 2.74818C5.02842 2.74818 3.72974 4.04559 3.72974 5.64635C3.72974 7.24711 5.02842 8.54453 6.63012 8.54453C8.23181 8.54453 9.53049 7.24711 9.53049 5.64635ZM5.0214 5.64635C5.0214 4.75924 5.74151 4.03984 6.63012 4.03984C7.51872 4.03984 8.23883 4.75924 8.23883 5.64635C8.23883 6.53346 7.51872 7.25286 6.63012 7.25286C5.74151 7.25286 5.0214 6.53346 5.0214 5.64635Z"/>
+                                      <path fill-rule="evenodd" clip-rule="evenodd" d="M16.1256 15.3556V17.4086C16.1256 17.7653 16.4147 18.0545 16.7714 18.0545C17.1281 18.0545 17.4172 17.7653 17.4172 17.4086V15.2973L16.1256 15.3556ZM17.4172 10.9082V1.39196C17.4172 1.03528 17.1281 0.746127 16.7714 0.746127C16.4147 0.746127 16.1256 1.03528 16.1256 1.39196V10.9258"/>
+                                      <path fill-rule="evenodd" clip-rule="evenodd" d="M13.8123 13.1542C13.8123 14.755 15.111 16.0524 16.7127 16.0524C18.3144 16.0524 19.6131 14.755 19.6131 13.1542C19.6131 11.5534 18.3144 10.256 16.7127 10.256C15.111 10.256 13.8123 11.5534 13.8123 13.1542ZM18.3214 13.1542C18.3214 14.0413 17.6013 14.7607 16.7127 14.7607C15.8241 14.7607 15.104 14.0413 15.104 13.1542C15.104 12.2671 15.8241 11.5477 16.7127 11.5477C17.6013 11.5477 18.3214 12.2671 18.3214 13.1542Z"/>
+                                    </mask>
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M7.21724 3.44497V1.39193C7.21724 1.03524 6.92809 0.746094 6.5714 0.746094C6.21472 0.746094 5.92557 1.03524 5.92557 1.39193V3.50325L7.21724 3.44497ZM5.92557 7.89239V17.4086C5.92557 17.7653 6.21472 18.0544 6.5714 18.0544C6.92809 18.0544 7.21724 17.7653 7.21724 17.4086V7.87473" fill="white"/>
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M9.53049 5.64635C9.53049 4.04559 8.23181 2.74818 6.63012 2.74818C5.02842 2.74818 3.72974 4.04559 3.72974 5.64635C3.72974 7.24711 5.02842 8.54453 6.63012 8.54453C8.23181 8.54453 9.53049 7.24711 9.53049 5.64635ZM5.0214 5.64635C5.0214 4.75924 5.74151 4.03984 6.63012 4.03984C7.51872 4.03984 8.23883 4.75924 8.23883 5.64635C8.23883 6.53346 7.51872 7.25286 6.63012 7.25286C5.74151 7.25286 5.0214 6.53346 5.0214 5.64635Z" fill="white"/>
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M16.1256 15.3556V17.4086C16.1256 17.7653 16.4147 18.0545 16.7714 18.0545C17.1281 18.0545 17.4172 17.7653 17.4172 17.4086V15.2973L16.1256 15.3556ZM17.4172 10.9082V1.39196C17.4172 1.03528 17.1281 0.746127 16.7714 0.746127C16.4147 0.746127 16.1256 1.03528 16.1256 1.39196V10.9258" fill="white"/>
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M13.8123 13.1542C13.8123 14.755 15.111 16.0524 16.7127 16.0524C18.3144 16.0524 19.6131 14.755 19.6131 13.1542C19.6131 11.5534 18.3144 10.256 16.7127 10.256C15.111 10.256 13.8123 11.5534 13.8123 13.1542ZM18.3214 13.1542C18.3214 14.0413 17.6013 14.7607 16.7127 14.7607C15.8241 14.7607 15.104 14.0413 15.104 13.1542C15.104 12.2671 15.8241 11.5477 16.7127 11.5477C17.6013 11.5477 18.3214 12.2671 18.3214 13.1542Z" fill="white"/>
+                                    <path d="M7.21724 3.44497L7.22625 3.64477L7.41724 3.63615V3.44497H7.21724ZM5.92557 3.50325H5.72557V3.71247L5.93458 3.70304L5.92557 3.50325ZM16.1256 15.3556L16.1166 15.1558L15.9256 15.1644V15.3556H16.1256ZM17.4172 15.2973H17.6172V15.0881L17.4082 15.0975L17.4172 15.2973ZM7.41724 3.44497V1.39193H7.01724V3.44497H7.41724ZM7.41724 1.39193C7.41724 0.924786 7.03854 0.546094 6.5714 0.546094V0.946094C6.81763 0.946094 7.01724 1.1457 7.01724 1.39193H7.41724ZM6.5714 0.546094C6.10426 0.546094 5.72557 0.924786 5.72557 1.39193H6.12557C6.12557 1.1457 6.32518 0.946094 6.5714 0.946094V0.546094ZM5.72557 1.39193V3.50325H6.12557V1.39193H5.72557ZM5.93458 3.70304L7.22625 3.64477L7.20822 3.24517L5.91656 3.30345L5.93458 3.70304ZM5.72557 7.89239V17.4086H6.12557V7.89239H5.72557ZM5.72557 17.4086C5.72557 17.8757 6.10426 18.2544 6.5714 18.2544V17.8544C6.32518 17.8544 6.12557 17.6548 6.12557 17.4086H5.72557ZM6.5714 18.2544C7.03854 18.2544 7.41724 17.8757 7.41724 17.4086H7.01724C7.01724 17.6548 6.81763 17.8544 6.5714 17.8544V18.2544ZM7.41724 17.4086V7.87473H7.01724V17.4086H7.41724ZM9.73049 5.64635C9.73049 3.93498 8.34211 2.54818 6.63012 2.54818V2.94818C8.12151 2.94818 9.33049 4.15621 9.33049 5.64635H9.73049ZM6.63012 2.54818C4.91812 2.54818 3.52974 3.93498 3.52974 5.64635H3.92974C3.92974 4.15621 5.13872 2.94818 6.63012 2.94818V2.54818ZM3.52974 5.64635C3.52974 7.35773 4.91812 8.74453 6.63012 8.74453V8.34453C5.13872 8.34453 3.92974 7.1365 3.92974 5.64635H3.52974ZM6.63012 8.74453C8.34211 8.74453 9.73049 7.35773 9.73049 5.64635H9.33049C9.33049 7.1365 8.12151 8.34453 6.63012 8.34453V8.74453ZM5.2214 5.64635C5.2214 4.86994 5.85173 4.23984 6.63012 4.23984V3.83984C5.63129 3.83984 4.8214 4.64855 4.8214 5.64635H5.2214ZM6.63012 4.23984C7.4085 4.23984 8.03883 4.86994 8.03883 5.64635H8.43883C8.43883 4.64855 7.62895 3.83984 6.63012 3.83984V4.23984ZM8.03883 5.64635C8.03883 6.42277 7.4085 7.05286 6.63012 7.05286V7.45286C7.62895 7.45286 8.43883 6.64416 8.43883 5.64635H8.03883ZM6.63012 7.05286C5.85173 7.05286 5.2214 6.42277 5.2214 5.64635H4.8214C4.8214 6.64416 5.63129 7.45286 6.63012 7.45286V7.05286ZM15.9256 15.3556V17.4086H16.3256V15.3556H15.9256ZM15.9256 17.4086C15.9256 17.8758 16.3043 18.2545 16.7714 18.2545V17.8545C16.5252 17.8545 16.3256 17.6549 16.3256 17.4086H15.9256ZM16.7714 18.2545C17.2385 18.2545 17.6172 17.8758 17.6172 17.4086H17.2172C17.2172 17.6549 17.0176 17.8545 16.7714 17.8545V18.2545ZM17.6172 17.4086V15.2973H17.2172V17.4086H17.6172ZM17.4082 15.0975L16.1166 15.1558L16.1346 15.5554L17.4262 15.4971L17.4082 15.0975ZM17.6172 10.9082V1.39196H17.2172V10.9082H17.6172ZM17.6172 1.39196C17.6172 0.924819 17.2385 0.546127 16.7714 0.546127V0.946127C17.0176 0.946127 17.2172 1.14573 17.2172 1.39196H17.6172ZM16.7714 0.546127C16.3043 0.546127 15.9256 0.924819 15.9256 1.39196H16.3256C16.3256 1.14573 16.5252 0.946127 16.7714 0.946127V0.546127ZM15.9256 1.39196V10.9258H16.3256V1.39196H15.9256ZM13.6123 13.1542C13.6123 14.8656 15.0007 16.2524 16.7127 16.2524V15.8524C15.2213 15.8524 14.0123 14.6444 14.0123 13.1542H13.6123ZM16.7127 16.2524C18.4247 16.2524 19.8131 14.8656 19.8131 13.1542H19.4131C19.4131 14.6444 18.2041 15.8524 16.7127 15.8524V16.2524ZM19.8131 13.1542C19.8131 11.4428 18.4247 10.056 16.7127 10.056V10.456C18.2041 10.456 19.4131 11.6641 19.4131 13.1542H19.8131ZM16.7127 10.056C15.0007 10.056 13.6123 11.4428 13.6123 13.1542H14.0123C14.0123 11.6641 15.2213 10.456 16.7127 10.456V10.056ZM18.1214 13.1542C18.1214 13.9306 17.4911 14.5607 16.7127 14.5607V14.9607C17.7115 14.9607 18.5214 14.152 18.5214 13.1542H18.1214ZM16.7127 14.5607C15.9343 14.5607 15.304 13.9306 15.304 13.1542H14.904C14.904 14.152 15.7139 14.9607 16.7127 14.9607V14.5607ZM15.304 13.1542C15.304 12.3778 15.9343 11.7477 16.7127 11.7477V11.3477C15.7139 11.3477 14.904 12.1564 14.904 13.1542H15.304ZM16.7127 11.7477C17.4911 11.7477 18.1214 12.3778 18.1214 13.1542H18.5214C18.5214 12.1564 17.7115 11.3477 16.7127 11.3477V11.7477Z" fill="white" mask="url(#path-1-outside-1)"/>
+                                  </svg>
+                                  <span>Фильтры</span>
+                                </div>
+                              </div>
+                              <div class="sort-modal">
+                                <div class="sort-modal__click">
+                                  По популярности
+
+                                </div>
+                              </div>
+
+                            </div>
+                            <form name="ExtendedFilter117" class="mobile-filter-form" action="/zhenshchiny/zhilety/search/result" method="get">
                               <div class="filter-cell filter-cell0" style="float: left; width: 19%;">
                                 <div class="filter-field-category-multi multiple-select">
                                   <h3 class="cat-title">
@@ -367,13 +395,16 @@
                                   </div>
                                 </div>
                               </div>
-                              <div class="filter-cell filter-cell2" style="float: left; width: 19%;">
+                              <div class="filter-cell filter-cell-active filter-cell2" style="float: left; width: 19%;">
                                 <div class="filter-field-manufacturer-multi multiple-select">
                                   <h3>
                                     Производитель		
                                   </h3>
+                                  <svg width="9" height="10" viewBox="0 0 9 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M8 8.49994L1.00006 1.5M7.99989 1.50006L0.99995 8.5" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                  </svg>
                                   <select name="manufacturer[]" multiple="multiple">		
-                                  </select>		
+                                  </select>
                                 </div>
                               </div>
                               <div class="filter-cell filter-cell3" style="float: left; width: 19%;">
@@ -1055,6 +1086,53 @@
                           Показано 1 - 16 из 53
                         </div>
                       </div>
+                      <section id="sp-section-4">
+                            <div id="sp-slider" class="col-sm-9 col-md-9 sp-slider-catalog">
+                              <div class="sp-column ">
+                                <div class="sp-module ">
+                                  <div class="sp-module-content">
+                                    <div class="custom">
+                                      <div class="product__triggers product__triggers-catalog">
+                                        <ul>
+                                          <li>
+                                            <a href="#" class="trigger__block">
+                                              <p>Пальто
+                                                из шерсти</p>
+                                              <img src="img/g.png" alt=""/> <span
+                                                    class="readmore__trigger">Смотреть</span>
+                                            </a>
+                                          </li>
+                                          <li>
+                                            <a href="#" class="trigger__block">
+                                              <p>Куртки
+                                                из шерсти</p>
+                                              <img src="img/g3.png" alt=""/> <span
+                                                    class="readmore__trigger">Смотреть</span>
+                                            </a>
+                                          </li>
+                                          <li>
+                                            <a href="#" class="trigger__block">
+                                              <p>Головные уборы</p>
+                                              <img src="img/g5.png" alt=""/> <span
+                                                    class="readmore__trigger">Смотреть</span>
+                                            </a>
+                                          </li>
+                                          <li>
+                                            <a href="#" class="trigger__block">
+                                              <p>Пончо</p>
+                                              <img src="img/poncho.png" alt=""/> <span
+                                                    class="readmore__trigger">Смотреть</span>
+                                            </a>
+                                          </li>
+                                        </ul>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+
+                      </section>
                     </div>
                   </div>
                   <div class="bottom-desk">
