--- a/product.html
+++ b/product.html
@@ -795,24 +795,24 @@
                                 <form name="product" method="post" action="/korzina/add" enctype="multipart/form-data"
                                       autocomplete="off">
                                     <div class="container">
-                                        <div class="row">
-                                            <div class="col-lg-5">
+                                        <div class="row gallery-flex">
+                                            <div class="col-lg-5 product-gallery__wrapper">
+                                                <div class="product-gallery">
+                                                    <img class="product-gallery__active" src="img/gallery1.jpg" alt="">
+                                                    <img src="img/gallery2.jpg" alt="">
+                                                </div>
                                                 <div class="product-img__block">
-                                                    <div class="span8 jshop_img_description">
-                                <span id="list_product_image_thumb">
-                                </span>
-                                                    </div>
-                                                    <div class="row-fluid jshop">
-                                                        <div class="image_middle">
-                                  <span id="list_product_image_middle">
-                                  <a class="lightbox not-active" id="main_image_full_745"
-                                     href="https://comand-it.ru/components/com_jshopping/files/img_products/full_shapka-luan-rozovaya.jpg"
-                                     title="Шапка ALWERO LUAN розовая">
-                                  <img id="main_image_745"
-                                       src="https://comand-it.ru/components/com_jshopping/files/img_products/shapka-luan-rozovaya.jpg"
-                                       alt="Шапка ALWERO LUAN розовая" title="Шапка ALWERO LUAN розовая">
-                                  </a>
-                                  </span>
+                                                    <div class="span8 jshop_img_description"><span id="list_product_image_thumb"></span></div>
+                                                                            <div class="row-fluid jshop"><div class="image_middle">
+                                                          <span id="list_product_image_middle">
+                                                          <a class="lightbox not-active" id="main_image_full_745"
+                                                             href="https://comand-it.ru/components/com_jshopping/files/img_products/full_shapka-luan-rozovaya.jpg"
+                                                             title="Шапка ALWERO LUAN розовая">
+                                                          <img id="main_image_745"
+                                                               src="img/gallery1.jpg"
+                                                               alt="Шапка ALWERO LUAN розовая" title="Шапка ALWERO LUAN розовая">
+                                                          </a>
+                                                          </span>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -941,6 +941,10 @@
                                                         <div class="cost-block">
                                                             Цвет:
                                                             <span> серый</span>
+                                                        </div>
+                                                        <div class="choose-color-clothes">
+                                                            <img class="product-gallery__active" src="img/gallery1.jpg" alt="">
+                                                            <img src="img/gallery2.jpg" alt="">
                                                         </div>
                                                         <div class="size-block">
                                                             <span>Размер:</span>
@@ -2283,6 +2287,78 @@
         </li>
     </ul>
 </nav>
+<div class="modal-form__comment">
+    <div class="modal-feedback">
+        <a class="btn-close add-request" href="#">
+            <i class="fa fa-times" aria-hidden="true"></i>
+        </a>
+        <div class="content__form">
+            <div class="qf3form feedback">
+                <form method="post" enctype="multipart/form-data" autocomplete="off">
+                    <div class="title__feedback">Оставить отзыв о магазине</div>
+                    <div class="content__form-wrapper">
+                        <div>
+                            <div class="qf3 qf3txt qftext req">
+                                <span class="qf3-red">*</span>
+
+                                <label class="qf3label">
+                                </label><input type="text"
+                                               name="qftext[]"
+                                               placeholder="Тема"
+                                               required/></div>
+                            <div class="qf3 qf3txt qftext req box_phone__mask">
+                                <span class="qf3-red">*</span>
+
+                                <label class="qf3label"></label><input
+                                    type="text" name="qftext[]" class="phone__mask" placeholder="Имя" required/></div>
+                            <div class="qf3 qf3txt qftext req box_phone__mask">
+                                <label class="qf3label"></label><input type="text" name="qftext[]" class="phone__mask"
+                                                                       placeholder="E-mail" required/>
+                            </div>
+                            <div class="qf3 qf3btn qfsubmit box_feedback-button box_custom-template__button"><label
+                                    class="qf3label"></label><input name="qfsubmit" type="button"
+                                                                    class="feedback-button custom-template__button"
+                                                                    value="Отправить"
+                                                                    onclick="this.form.submit(this)"/>
+                            </div>
+                            <input name="option" type="hidden" value="com_qf3"/><input name="id" type="hidden"
+                                                                                       value="1"/><input
+                                type="hidden" name="3a814cbb205d86235d72b3f9cf8d6045" value="1"/><input name="task"
+                                                                                                        type="hidden"
+                                                                                                        value="ajax"/><input
+                                name="mod" type="hidden" value="qfajax"/><input name="root" type="hidden"
+                                                                                value="https://comand-it.ru/"/><input
+                                name="qfcod" type="hidden" value=""/>
+                            <div class="qfcapt"><a href="http://plasma-web.ru/dev/quickform3" target="_blank">Конструктор
+                                форм</a></div>
+                        </div>
+                        <div>
+                            <textarea class="content__form-wrapper-textarea" placeholder="Содержание" rows="7"></textarea>
+                            <div class="modal-feedback__captcha">
+                                <div class="modal-feedback__captcha-wrapper">
+                                    <img src="img/captcha.jpg" alt="">
+                                    <div class="qf3 qf3txt qftext req">
+
+                                        <label class="qf3label">
+                                        </label><input type="text"
+                                                       name="qftext[]"
+                                                       placeholder="Проверочный код"
+                                                       required/></div>
+                                </div>
+                                <div class="modal-feedback__captcha-reload">
+                                    <img src="img/reload-captcha.png" alt="">
+                                    <span>Обновить</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+
+            </div>
+        </div>
+    </div>
+</div>
+
 <script src="js/slick.min.js"></script>
 <script src="js/jquery.nicescroll.js"></script>
 </body>
